fixed button not showing on hover

--- a/client/src/components/BeatList/TableHeader.scss
+++ b/client/src/components/BeatList/TableHeader.scss
@@ -3,7 +3,7 @@
     position: sticky;
     top: 0;
     background-color: $color-black;
-    color: $color-white;
+    color: $color-gray-light;
     text-align: left;
     z-index: 3;
   
@@ -11,10 +11,10 @@
       position: relative;
       box-sizing: border-box;
       padding: 10px;
-      color: #FFFFFF;
       min-width: 60px;
       transition: background-color .2s ease-in-out;
       background-color: $color-black;
+      font-weight: 300;
       padding-right: 36px;
 
       &--first {
